[package]
name = "token-vesting"
version = "0.1.0"
edition = "2021"

[dependencies]
num-derive = "0.4.2"
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
thiserror = { version = "2.0", default-features = false }

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
litesvm = "0.9.0"
litesvm-token = "0.9.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"

